# MCP-MarketMind

./: CLAUDE.md  IDEA.md  README.md  pyproject.toml
src/marketmind/: __init__.py  schemas.py  server.py  tools.py  workflow.py
tests/: conftest.py  test_tools.py  test_workflow.py
