[project]
name = "marketmind-mcp"
version = "0.1.0"
description = "Financial research MCP server built with FastMCP, Pydantic v2, and LangGraph"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "langgraph>=0.2",
    "openai>=1.0",
    "yfinance>=0.2.50",
    "feedparser>=6.0",
    "httpx>=0.27",
    "pandas>=2.0",
]

[project.scripts]
marketmind = "marketmind.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marketmind"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
]
